noctel-gitops/networking/pdx2/cattle-system/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: traefik-management
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: dnsmadeeasy
spec:
  ingressClassName: traefik-management
  rules:
  - host: pdx2-rancher.telnoc.com
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: rancher.telnoc.com
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        path: /
        pathType: Prefix

  tls:
  - hosts:
    - pdx2-rancher.telnoc.com
    - rancher.telnoc.com
