noctel-gitops/networking/pdx2/cattle-system/rancher-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ingressroute
  namespace: cattle-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pdx2-rancher.telnoc.com`) || Host(`rancher.telnoc.com`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    certResolver: dnsmadeeasy
    domains:
      - main: pdx2-rancher.telnoc.com
        sans:
          - rancher.telnoc.com
